<resources>
    <string name="app_name">Cafe Managment</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_selected__item">Selected_Item</string>
    <string name="title_activity_ordered_items">Ordered_items</string>
    <string name="title_activity_inventory">Stock</string>
    <string name="add">Add</string>
    <string name="suger_Units">Units</string>
    <string name="suger">Suger:</string>
    <string name="milk_units">Units</string>
    <string name="milk">Milk:</string>
    <string name="amount">Amount</string>
    <string name="coffee">Coffee:</string>
    <string name="coffee_units">Units</string>
    <string name="confirm">Confirm</string>
    <string name="total">L.E</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="selected_beverage">Selected Beverage</string>
    <string name="itemname">ItemName</string>
    <string name="itemprice">itemPrice</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="todo">TODO</string>
</resources>
