<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:background="@color/myblue"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/cardview_shadow_start_color"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_itemname"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/item_name"
            android:textColor="@color/mywhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/mywhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/quantity"
            android:textColor="@color/mywhite"
            android:textSize="18sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#D3ABCCDB" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/linear1"

        android:background="@color/mywhite" />

</RelativeLayout>